src/app/subjects/subject-learn.component.scss
.bottom-box {
  position: relative;
  width: 10%;
  height: 100%;
  bottom: 0;

}

.card-container-outer {
  display: table;
  position: absolute;
  height: 70%;
  width: 100%;
  margin-bottom: 1%;
}

.card-container-inner {
  text-align: center;
  display: table-cell;
  vertical-align: middle;
  padding-bottom: 5%;
}

.card-container {
  max-width: 60%;
  min-height: 50%;
  display: inline-block;
  margin-left: auto;
  margin-right: 10%;
}

.learn-card-title {
  font-size: 16pt;
}

.learn-card-subtitle {
  font-size: 15pt;
}

.learn-card-content {
  font-size: 13pt;
}

.learn-card-answer-edit-field {
  width: 90%;
}

/*
  Boxes
 */
.boxes-outer-container {
  position: fixed;
  bottom: 0;
  margin-right: 5%;
  margin-left: 5%;
  height: 14rem;
  width: 80%;
  text-align: center;
}

.boxes-inner-container {
  display: inline-block;
}

.boxes-toggle-button {
  margin-bottom: 1rem;
}

.boxes-table {
  display: table;
  width: 100%;
  border-collapse: separate;
  border-spacing: 1em;
}

.boxes-table-row-group {
  display: table-row-group;
}

.boxes-table-row {
  display: table-row;
}

.boxes-card {
  display: table-cell;
}

